--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -13,3 +13,7 @@
 [[constraint]]
   name = "gopkg.in/yaml.v2"
   version = "2.2.2"
+
+[[constraint]]
+  name = "github.com/bitrise-io/stepman"
+  version = "0.11.1"
