--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -17,3 +17,7 @@
 [[constraint]]
   name = "github.com/bitrise-io/stepman"
   version = "0.11.1"
+
+[[constraint]]
+  branch = "master"
+  name = "github.com/bitrise-io/go-utils"
