--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -16,7 +16,7 @@
 
 [[constraint]]
   name = "github.com/bitrise-io/stepman"
-  version = "0.11.1"
+  branch = "master"
 
 [[constraint]]
   branch = "master"
